Fixes for Fedora 10.
Fix obvious typo in liblocsetup.pm which was getting perl5.10 all cranky.
Stop statically linking a couple of proxy pieces.  In general, it is/was
a bad idea, and Fedora 10 doesn't have a static libz anyway.

--- a/event/proxy/GNUmakefile.in
+++ b/event/proxy/GNUmakefile.in
@@ -85,10 +85,10 @@ evproxyplab.o: evproxyplab.cc
 	$(CPPC) $(CFLAGS)  -c $<
 
 evproxyplab-debug:    evproxyplab.o ../lib/libevent.a ../lib/event.h
-	$(CPPC) $(LDFLAGS) -static -o $@ evproxyplab.o $(LIBS)
+	$(CPPC) $(LDFLAGS) -o $@ evproxyplab.o $(LIBS)
 
 eventping-debug: eventping.o
-	$(CC) $(LDFLAGS) -static -o $@ eventping.o -pthread $(LIBS)
+	$(CC) $(LDFLAGS) -o $@ eventping.o -pthread $(LIBS)
 
 $(PROGRAMS):	../lib/libevent.a ../lib/event.h
 
