Add a disabled bit to geni_authorities, mostly so that we can turn off CMs at the clearinghouse, as when they are in test mode or not usable. Note that you have to set/clear this git in the geni-ch database on boss, for ListComponents() to be affected.

--- a/protogeni/lib/GeniCH.pm.in
+++ b/protogeni/lib/GeniCH.pm.in
@@ -802,6 +802,8 @@ sub ListComponents($)
 	my $manager = GeniAuthority->Lookup($manager_uuid);
 	return GeniResponse->Create(GENIRESPONSE_DBERROR)
 	    if (!defined($manager));
+	next
+	    if ($manager->disabled());
 	    
 	push(@results, { "gid" => $manager->cert(),
 			 "hrn" => $manager->hrn(),
