fixed soem bugs

--- a/protogeni/scripts/genadmincredential.in
+++ b/protogeni/scripts/genadmincredential.in
@@ -1,16 +1,11 @@
-#!/usr/bin/perl -wT
+#!/usr/bin/perl -w
 #
 # GENIPUBLIC-COPYRIGHT
 # Copyright (c) 2008-2009 University of Utah and the Flux Group.
 # All rights reserved.
 #
 use strict;
-
-use Exporter;
-use vars qw(@ISA @EXPORT);
-
-@ISA    = "Exporter";
-@EXPORT = qw ( );
+use lib '@prefix@/lib';
 
 use GeniCredential;
 use GeniCertificate;
@@ -19,7 +14,7 @@ use GeniHRN;
 use GeniResponse;
 use GeniUser;
 
-sub CreateAdminCredential()
+sub CreateAdminCredential
 {
 	my $owner_urn = shift;
 	my $target_cm_urn = shift;
@@ -44,7 +39,7 @@ sub CreateAdminCredential()
         my $credential =
             GeniCredential->CreateSigned($authority,
                                          $geniuser,
-                                         $GeniCredential::LOCALSA_FLAG);
+                                         $GeniCredential::LOCALCM_FLAG);
         return GeniResponse->Create(GENIRESPONSE_ERROR)
             if (!defined($credential));
 
@@ -53,6 +48,8 @@ sub CreateAdminCredential()
 
 }
 
-print CreateAdminCredential @ARGV
-
+my $val =  CreateAdminCredential @ARGV; 
+print $val->{"code"};
+print $val->{"value"};
+print $val->{"output"};
 
