--- a/protogeni/scripts/GNUmakefile.in
+++ b/protogeni/scripts/GNUmakefile.in
@@ -16,7 +16,7 @@ PSBIN_STUFF	= register_resources expire_daemon gencrl postcrl \
 		  createcerts initsite addauthority getcacerts \
 		  gencrlbundle shutdownslice remauthority listusage \
 		  update reregister cleanupticket listhistory \
-		  register_sliver sa_daemon
+		  register_sliver sa_daemon genadmincredential
 
 # These scripts installed setuid, with sudo. 
 SETUID_BIN_SCRIPTS   = 
