corrected the number of arguments to lookup.

--- a/protogeni/scripts/genadmincredential.in
+++ b/protogeni/scripts/genadmincredential.in
@@ -18,6 +18,7 @@ sub CreateAdminCredential
 {
 	my $owner_urn = shift;
 	my $target_cm_urn = shift;
+
 	#
         # Must be an emulab user who is talking to us.
         # If any of the URN specofoed is invalid do no accept.
@@ -25,7 +26,7 @@ sub CreateAdminCredential
             return GeniResponse->MalformedArgsResponse();
         }
 
-        my $geniuser = GeniUser->Lookup($owner_urn);
+        my $geniuser = GeniUser->Lookup($owner_urn, 1);
         if (!defined($geniuser)) {
             return GeniResponse->Create(GENIRESPONSE_FORBIDDEN,
                                         undef, "Who are you?");
@@ -49,7 +50,7 @@ sub CreateAdminCredential
 }
 
 my $val =  CreateAdminCredential @ARGV; 
-print $val->{"code"};
-print $val->{"value"};
+print STDERR $val->{"code"};
+print STDERR $val->{"value"};
 print $val->{"output"};
 
