Don't restart dhcpd after tweaking pxe_boot related state.
dhcpd isn't running at this time so invoking dhcpd_makeconf will blow up
the elabinelab setup.

--- a/db/elabinelab_bossinit.in
+++ b/db/elabinelab_bossinit.in
@@ -203,8 +203,9 @@ if (1) {
 
     #
     # Remake the dhcpd.conf file to reflect any pxeboot change.
+    # XXX dhcpd is not running yet so don't need this.
     #
-    mysystem("$TB/sbin/dhcpd_makeconf -ir");
+    #mysystem("$TB/sbin/dhcpd_makeconf -ir");
 }
 
 #
