--- a/os/imagezip/Makefile-linux.sa
+++ b/os/imagezip/Makefile-linux.sa
@@ -31,27 +31,27 @@ LIBS 		= -lz $(PTHREADLIBS)
 UNZIPCFLAGS	= $(CFLAGS) -Wall
 UNZIPLIBS	= $(LIBS)
 
-ifdef WITH_EXTFS
+ifeq (WITH_EXTFS, 1)
 FSOBJS		+= extfs/extfs.o extfs/reloc_lilo.o
 CFLAGS		+= -DWITH_EXTFS -Iextfs
 endif
 
-ifdef WITH_EXT4FS
+ifeq (WITH_EXT4FS, 1)
 FSOBJS		+= ext4fs/ext4fs.o ext4fs/reloc_lilo.o
 CFLAGS		+= -DWITH_EXT4FS -Iext4fs
 endif
 
-ifdef WITH_FFS
+ifeq (WITH_FFS, 1)
 FSOBJS		+= ffs/ffs.o
 CFLAGS		+= -DWITH_FFS -Iffs
 endif
 
-ifdef WITH_FAT
+ifeq (WITH_FAT, 1)
 FSOBJS		+= fat/fat_fat.o fat/fat_boot.o fat/fat_glue.o
 CFLAGS		+= -DWITH_FAT -Ifat
 endif
 
-ifdef WITH_NTFS
+ifeq (WITH_NTFS, 1)
 FSOBJS		+= ntfs/ntfs_glue.o
 FSLIBS		+= ntfs/libntfs/libntfs.a
 CFLAGS		+= -DWITH_NTFS -DOLD_LIBNTFS -Intfs/libntfs/ntfsprogs-1.7.1.linux/include
