Fixed incorrect path for compiled wget binary
The wget build for the Linux MFS failed because it target depended on
the wrong path for the compiled wget binary.

--- a/mfs/linux_mfs/source/wget/Makefile
+++ b/mfs/linux_mfs/source/wget/Makefile
@@ -14,7 +14,7 @@ patch: $(WGET_PATH)/.patch-stamp
 
 config: $(WGET_PATH)/.config-stamp
 
-wget: $(WGET_PATH)/wget
+wget: $(WGET_PATH)/src/wget
 
 install: $(TARGET_PATH)/usr/bin/wget
 
