Update of Linux MFS to kernel 2.6.32.9, etc.
The following components of the Linux MFS were updated:

Linux kernel => 2.6.32.9
buildroot => 2010.02
uClibc => 0.9.30.2
busybox => 1.16.0
binutils => 2.20
gcc => 4.2.4
gmp => 4.2.4

The Dell Optiplex reboot patch was removed from the kernel build as it
is already present in 2.6.32.9.

The update was done because:
- The kernel was over a year old and significant updates have happened
  since then.
- A few new useful features were added to busybox
- The kernel now supports bzip2 and lzma compression for itself and
  initramfs in addition to gzip.  Using lzma instead of gzip saves us at
  least 1.5 MB for the kernel+initramfs, possibly more.

--- a/mfs/linux_mfs/source/ethtool/Makefile
+++ b/mfs/linux_mfs/source/ethtool/Makefile
@@ -71,6 +71,7 @@ $(ETHTOOL_PATH)/ethtool: $(ETHTOOL_PATH)/.config-stamp
 $(TARGET_PATH)/usr/sbin/ethtool: $(ETHTOOL_PATH)/ethtool
 	install -d -m 755 $(TARGET_PATH)/usr
 	install -d -m 755 $(TARGET_PATH)/usr/bin
+	mkdir -p $(TARGET_PATH)/usr/sbin
 	install -m 755 $(ETHTOOL_PATH)/ethtool \
 		$(TARGET_PATH)/usr/sbin/ethtool
 	$(STRIPCMD) --strip-unneeded $(TARGET_PATH)/usr/sbin/ethtool
