--- a/mfs/linux_mfs/Makefile
+++ b/mfs/linux_mfs/Makefile
@@ -4,7 +4,8 @@ TARGET_PATH	=	$(PWD)/target
 TARGET_BUILD_PATH	=	$(PWD)/build
 SCRIPTS_PATH	=	$(PWD)/scripts
 INITRAMFS_PATH	=	$(PWD)/initramfs.tmp
-BUILDROOT_PATH	=	$(PWD)/buildroot
+BUILDROOT_VERSION	=	2010.02
+BUILDROOT_PATH		=	$(PWD)/buildroot-$(BUILDROOT_VERSION)
 FAKEROOT_ENVIRONMENT	=	$(PWD)/fs_fakeroot.env
 STAGING_DIR	=	$(PWD)/buildroot/build_$(MFS_ARCH)/staging_dir
 BOOT_PATH	=	$(PWD)/boot
@@ -68,7 +69,7 @@ $(INSTALL_MODULES):
 
 $(TARGET_PATH)/lib/libc.so.0:
 	mkdir -p $(TARGET_PATH)/lib
-	cp -dpR $(BUILDROOT_PATH)/project_build_$(MFS_ARCH)/uclibc/root/lib/* $(TARGET_PATH)/lib
+	cp -dpR $(BUILDROOT_PATH)/output/target/lib/* $(TARGET_PATH)/lib
 
 uclibc-install: $(TARGET_PATH)/lib/libc.so.0
 
