Bug fix in all-but-swapper-frozen code.
Don't attempt to run setgroups on non-active accounts.

--- a/db/elabinelab_bossinit.in
+++ b/db/elabinelab_bossinit.in
@@ -156,6 +156,8 @@ $users_result->dataseek(0);
 while (my ($uid,$admin) = $users_result->fetchrow_array()) {
     next
 	if ($uid eq "elabman");
+    next
+	if ($status ne USERSTATUS_ACTIVE());
     
     mysystem("$TB/sbin/setgroups $uid");
 }
